tests/type_tests/negatives/curry_return_type.py
from pfun import curry


@curry
def f(a: int, b: str) -> str:
    pass


map(f(1), range(5))
